[package]
name = "dhooks_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ethers-core = "2.0.12"
hex = "0.4.3"
ic-cdk = "0.10"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.6"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
url = "2.5.0"
